--- a/src/app/review/css/MyReviewList.css
+++ b/src/app/review/css/MyReviewList.css
@@ -255,22 +255,36 @@ body {
     gap: 2px;
 }
 
-.star {
-    width: 26.41px;
-    height: 30.15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.star-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
     font-size: 24px;
-    color: #F9E000;
 }
 
-.star.active {
-    color: #F9E000;
-}
-
-.star:not(.active) {
+.star-background {
     color: #DDDDDD;
+}
+
+.star-foreground.full {
+    color: #F9E000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.star-foreground.half {
+    color: #F9E000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .review-date {
