--- a/src/app/(user)/user-profile/[userId]/other-user-profile.css
+++ b/src/app/(user)/user-profile/[userId]/other-user-profile.css
@@ -68,11 +68,13 @@
 }
 
 .profile-avatar {
-    width: 80px;
-    height: 80px;
-    background-color: #E9ECEF;
+    width: 130px;
+    height: 130px;
+    background-color: #f0f0f0;
     border-radius: 50%;
     margin-bottom: 15px;
+    background-size: cover;
+    background-position: center;
 }
 
 .profile-name {
